src/test/deca/codegen/valid/while/while.deca
// Description:
//    Boucle while jusqu'à 10
//
// Résultats:
//    Affiche la valeur finale de i
{
    int i = 0;
    while (i < 10) {
        i = i + 1;
    }
    println(i);
}
